--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "axios": "^1.9.0",
         "body-parser": "^2.2.0",
         "cors": "^2.8.5",
+        "csv-parser": "^3.2.0",
         "dayjs": "^1.11.13",
         "dotenv": "^16.5.0",
         "express": "^5.1.0",
